# personal-ai-research-suite

./: .env.example  .gitignore  README.md  RELEASE_CHECKLIST.md
modules/local-mcp-toolkit/: .dockerignore  .env.example  .gitignore  ARCHITECTURE.md  Dockerfile  README.md  RELEASE_CHECKLIST.md  SECURITY.md  config.local_project.example.yaml  config.local_project.production.yaml  config.yaml  docker-compose.yml  pyproject.toml  requirements.txt  run.sh  run_bridge_check.ps1  run_mcp.ps1  run_tests.ps1
modules/local-mcp-toolkit/.github/workflows/: ci.yml
modules/local-mcp-toolkit/examples/client_examples/: list_files.json
modules/local-mcp-toolkit/local_mcp_toolkit/: __init__.py  cli.py
modules/local-mcp-toolkit/src/: __init__.py  cli.py
modules/local-mcp-toolkit/tests/: conftest.py  test_cli_smoke.py  test_code_tools.py  test_deployment_files.py  test_doctor_config.py  test_doctor_mcp_cli.py  test_doctor_rag_cli.py  test_fastmcp_server.py  test_filesystem_tools.py  test_local_project_rag_adapter.py  test_mcp_client.py  test_packaging.py  test_path_guard.py  test_prompt_injection_guard.py  test_rag_tools.py  test_sensitive_file_guard.py  test_tool_registry.py
modules/personal-ai-workspace/: .dockerignore  .env.example  .gitignore  ARCHITECTURE.md  Dockerfile  Dockerfile.production  README.md  RELEASE_CHECKLIST.md  RESUME_BULLETS.md  ROADMAP.md  SECURITY.md  config.production.yaml  config.yaml  docker-compose.production.yml  docker-compose.yml  pyproject.toml  requirements-production.txt  requirements.txt  run.sh  run_api.ps1  run_api.sh  run_production_check.ps1  run_streamlit.ps1  run_tests.ps1
modules/personal-ai-workspace/app/: streamlit_app.py
modules/personal-ai-workspace/docs/: BENCHMARK_REPORT.md
modules/personal-ai-workspace/examples/: benchmark_eval.jsonl  generate_benchmark_report.py  run_benchmark.py
modules/personal-ai-workspace/personal_ai_workspace/: __init__.py  cli.py
modules/personal-ai-workspace/src/: __init__.py  cli.py
modules/personal-ai-workspace/tests/: test_agent_tools.py  test_agent_workspace_bridge.py  test_api.py  test_benchmark_suite.py  test_chroma_store.py  test_chunking.py  test_cli_smoke.py  test_deployment_files.py  test_doctor_config.py  test_evaluation.py  test_evaluation_ab.py  test_graphrag.py  test_grounding.py  test_ingestion.py  test_llm_backends.py  test_llm_tool_planner.py  test_logging.py  test_mcp_tools.py  test_more_requirements.py  test_multi_agent.py  test_openai_compatible_clients.py  test_optional_production_integrations.py  test_packaging.py  test_phase6_agent.py  test_phase6_rag.py  test_reading_rag.py  test_retrieval.py  test_safe_delete.py  test_safety.py  test_settings_update.py  test_weekly_report.py
(+372 files in other folders)
